cabal-version:   3.2
name:            critical
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       2020 John 'Ski
maintainer:      John 'Ski <riuga@tuta.io>
author:          John 'Ski
tested-with:     ghc ==8.8.3
homepage:        https://github.com/riuga/critical
bug-reports:     https://github.com/riuga/critical/issues
synopsis:
  A resource management monad that prevents usage of dead resources while allowing for fine-tuned reallocation semantics.

description:
    Please refer to the Github page for more details.

category:        Control
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/riuga/critical.git

library
    exposed-modules:    Control.Monad.Critical
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        GeneralizedNewtypeDeriving MultiParamTypeClasses RankNTypes
        DerivingStrategies QuantifiedConstraints FlexibleInstances 
        DataKinds KindSignatures EmptyDataDecls TypeApplications
        ScopedTypeVariables

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        base ^>= 4.13.0.0,
        managed ^>=1.0,
        singletons ^>=2.6,
        stm ^>=2.5

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

test-suite critical-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.13.0.0,
        critical -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

benchmark critical-benchmark
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   benchmark
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.13.0.0,
        gauge -any,
        critical -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
