cabal-version:       2.4
name:                realloc
version:             0.0.0.0
synopsis:            A restricted ResourceT where released objects must be immediately reallocated, preventing 'dead' references.
description:         A restricted ResourceT where released objects must be immediately reallocated, preventing 'dead' references.
homepage:            https://github.com/riuga/realloc
bug-reports:         https://github.com/riuga/realloc/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              John 'Ski
maintainer:          John 'Ski <riuga@tuta.io>
copyright:           2020 John 'Ski
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/riuga/realloc.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Realloc

test-suite realloc-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       realloc
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark realloc-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , realloc
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
